# ur_test_interfaces

./: README.md
ur_test_controllers/: CMakeLists.txt  package.xml  ur_test_controllers.xml
ur_test_controllers/src/: ur_test_nullvel_controller.cpp  ur_test_nullvel_pid_controller.cpp  ur_test_sinusoid_controller.cpp
ur_test_launch/: CMakeLists.txt  package.xml
ur_test_launch/config/: dual_ur_driver_config.yaml  dual_ur_test_controllers.yaml  ur_driver_config.yaml  ur_test_controllers.yaml
ur_test_launch/launch/: dual_ur_test_joint_trajectory_controller.launch  dual_ur_test_nullvel_controller.launch  dual_ur_test_nullvel_pid_controller.launch  ur_test_joint_trajectory_controller.launch  ur_test_no_pid_vel_sinusoid_controller.launch  ur_test_nullvel_controller.launch  ur_test_nullvel_pid_controller.launch  ur_test_sinusoid_controller.launch  ur_test_vel_sinusoid_controller.launch
ur_test_launch/urdf/: dual_ur.urdf.xacro
